samples/_failures_safe/1761792359_d39bae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_877a4750.c: In function ‘main’:
./samples/SAFE/__tmp_877a4750.c:151:13: error: expected declaration or statement at end of input
  151 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_877a4750.c:151:13: error: expected declaration or statement at end of input
